// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColourPicker basic render 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RectPicker
    bgs={
      Array [
        Object {
          "colors": Array [
            Object {
              "offset": "0%",
              "stopColor": "#FF0000",
              "stopOpacity": 1,
            },
            Object {
              "offset": "8%",
              "stopColor": "#FF7F00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "20%",
              "stopColor": "#FFFF00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "25%",
              "stopColor": "#7FFF00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "33%",
              "stopColor": "#00FF00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "42%",
              "stopColor": "#00FF7F",
              "stopOpacity": 1,
            },
            Object {
              "offset": "50%",
              "stopColor": "#00FFFF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "58%",
              "stopColor": "#007FFF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "66%",
              "stopColor": "#0000FF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "75%",
              "stopColor": "#7F00FF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "83%",
              "stopColor": "#FF00FF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "92%",
              "stopColor": "#FF007F",
              "stopOpacity": 1,
            },
            Object {
              "offset": "100%",
              "stopColor": "#FF0000",
              "stopOpacity": 1,
            },
          ],
        },
        Object {
          "colors": Array [
            Object {
              "offset": "0%",
              "stopColor": "#fff",
              "stopOpacity": 1,
            },
            Object {
              "offset": "16%",
              "stopColor": "#fff",
              "stopOpacity": 0.9,
            },
            Object {
              "offset": "100%",
              "stopColor": "#fff",
              "stopOpacity": 0,
            },
          ],
          "x2": "0%",
          "y2": "100%",
        },
      ]
    }
    clickEnabled={true}
    coorToValue={[Function]}
    disabled={false}
    hueOffset={1}
    initData={[Function]}
    lossColor="rgba(0,0,0,0.2)"
    lossShow={false}
    onGrant={[Function]}
    onMove={[Function]}
    onPress={[Function]}
    onRelease={[Function]}
    opacityAnimationDuration={150}
    opacityAnimationValue={1}
    showThumbWhenDisabled={true}
    thumbComponent={[Function]}
    thumbImg={1}
    thumbSize={38}
    touchThumbSize={60}
    value={
      Object {
        "hue": 100,
        "saturation": 500,
        "value": 500,
      }
    }
    valueToColor={[Function]}
    valueToCoor={[Function]}
  />
  <Slider
    activeColor="#fff"
    clickEnabled={true}
    disabled={false}
    fontColor="#000"
    invalidSwipeDistance={7}
    max={1000}
    min={10}
    minPercent={1}
    onGrant={[Function]}
    onMove={[Function]}
    onPress={[Function]}
    onRelease={[Function]}
    opacityAnimationDuration={150}
    opacityAnimationValue={1}
    showAnimation={true}
    trackColor="#313131"
    value={500}
  />
</View>
`;

exports[`ColourPicker componentWillReceiveProps render 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RectPicker
    bgs={
      Array [
        Object {
          "colors": Array [
            Object {
              "offset": "0%",
              "stopColor": "#FF0000",
              "stopOpacity": 1,
            },
            Object {
              "offset": "8%",
              "stopColor": "#FF7F00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "20%",
              "stopColor": "#FFFF00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "25%",
              "stopColor": "#7FFF00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "33%",
              "stopColor": "#00FF00",
              "stopOpacity": 1,
            },
            Object {
              "offset": "42%",
              "stopColor": "#00FF7F",
              "stopOpacity": 1,
            },
            Object {
              "offset": "50%",
              "stopColor": "#00FFFF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "58%",
              "stopColor": "#007FFF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "66%",
              "stopColor": "#0000FF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "75%",
              "stopColor": "#7F00FF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "83%",
              "stopColor": "#FF00FF",
              "stopOpacity": 1,
            },
            Object {
              "offset": "92%",
              "stopColor": "#FF007F",
              "stopOpacity": 1,
            },
            Object {
              "offset": "100%",
              "stopColor": "#FF0000",
              "stopOpacity": 1,
            },
          ],
        },
        Object {
          "colors": Array [
            Object {
              "offset": "0%",
              "stopColor": "#fff",
              "stopOpacity": 1,
            },
            Object {
              "offset": "16%",
              "stopColor": "#fff",
              "stopOpacity": 0.9,
            },
            Object {
              "offset": "100%",
              "stopColor": "#fff",
              "stopOpacity": 0,
            },
          ],
          "x2": "0%",
          "y2": "100%",
        },
      ]
    }
    clickEnabled={true}
    coorToValue={[Function]}
    disabled={false}
    hueOffset={1}
    initData={[Function]}
    lossColor="rgba(0,0,0,0.2)"
    lossShow={false}
    onGrant={[Function]}
    onMove={[Function]}
    onPress={[Function]}
    onRelease={[Function]}
    opacityAnimationDuration={150}
    opacityAnimationValue={1}
    showThumbWhenDisabled={true}
    thumbComponent={[Function]}
    thumbImg={1}
    thumbSize={30}
    touchThumbSize={60}
    value={
      Object {
        "hue": 100,
        "saturation": 500,
        "value": 500,
      }
    }
    valueToColor={[Function]}
    valueToCoor={[Function]}
  />
  <Slider
    activeColor="#fff"
    clickEnabled={true}
    disabled={false}
    fontColor="#000"
    invalidSwipeDistance={7}
    max={1000}
    min={10}
    minPercent={1}
    onGrant={[Function]}
    onMove={[Function]}
    onPress={[Function]}
    onRelease={[Function]}
    opacityAnimationDuration={150}
    opacityAnimationValue={1}
    showAnimation={true}
    trackColor="#313131"
    value={500}
  />
</View>
`;

exports[`ColourPicker rectPicker mount 1`] = `
<ColourPicker
  bgs={
    Array [
      Object {
        "colors": Array [
          Object {
            "offset": "0%",
            "stopColor": "#FF0000",
            "stopOpacity": 1,
          },
          Object {
            "offset": "8%",
            "stopColor": "#FF7F00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "20%",
            "stopColor": "#FFFF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "25%",
            "stopColor": "#7FFF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "33%",
            "stopColor": "#00FF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "42%",
            "stopColor": "#00FF7F",
            "stopOpacity": 1,
          },
          Object {
            "offset": "50%",
            "stopColor": "#00FFFF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "58%",
            "stopColor": "#007FFF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "66%",
            "stopColor": "#0000FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "75%",
            "stopColor": "#7F00FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "83%",
            "stopColor": "#FF00FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "92%",
            "stopColor": "#FF007F",
            "stopOpacity": 1,
          },
          Object {
            "offset": "100%",
            "stopColor": "#FF0000",
            "stopOpacity": 1,
          },
        ],
      },
      Object {
        "colors": Array [
          Object {
            "offset": "0%",
            "stopColor": "#fff",
            "stopOpacity": 1,
          },
          Object {
            "offset": "16%",
            "stopColor": "#fff",
            "stopOpacity": 0.9,
          },
          Object {
            "offset": "100%",
            "stopColor": "#fff",
            "stopOpacity": 0,
          },
        ],
        "x2": "0%",
        "y2": "100%",
      },
    ]
  }
  brightOption={Object {}}
  clickEnabled={true}
  disabled={false}
  hideBright={false}
  hueOffset={1}
  lossColor="rgba(0,0,0,0.2)"
  lossShow={false}
  lossSliderColor="rgba(255,255,255,0.4)"
  onGrant={[Function]}
  onMove={[Function]}
  onPress={[Function]}
  onRelease={[Function]}
  opacityAnimationDuration={150}
  opacityAnimationValue={1}
  showThumbWhenDisabled={true}
  thumbComponent={[Function]}
  thumbImg={1}
  thumbSize={38}
  touchThumbSize={60}
  value={
    Object {
      "hue": 100,
      "saturation": 500,
      "value": 500,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RectPicker
        bgs={
          Array [
            Object {
              "colors": Array [
                Object {
                  "offset": "0%",
                  "stopColor": "#FF0000",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "8%",
                  "stopColor": "#FF7F00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "20%",
                  "stopColor": "#FFFF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "25%",
                  "stopColor": "#7FFF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "33%",
                  "stopColor": "#00FF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "42%",
                  "stopColor": "#00FF7F",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "50%",
                  "stopColor": "#00FFFF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "58%",
                  "stopColor": "#007FFF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "66%",
                  "stopColor": "#0000FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "75%",
                  "stopColor": "#7F00FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "83%",
                  "stopColor": "#FF00FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "92%",
                  "stopColor": "#FF007F",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "100%",
                  "stopColor": "#FF0000",
                  "stopOpacity": 1,
                },
              ],
            },
            Object {
              "colors": Array [
                Object {
                  "offset": "0%",
                  "stopColor": "#fff",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "16%",
                  "stopColor": "#fff",
                  "stopOpacity": 0.9,
                },
                Object {
                  "offset": "100%",
                  "stopColor": "#fff",
                  "stopOpacity": 0,
                },
              ],
              "x2": "0%",
              "y2": "100%",
            },
          ]
        }
        clickEnabled={true}
        coorToValue={[Function]}
        disabled={false}
        hueOffset={1}
        initData={[Function]}
        lossColor="rgba(0,0,0,0.2)"
        lossShow={false}
        onGrant={[Function]}
        onMove={[Function]}
        onPress={[Function]}
        onRelease={[Function]}
        opacityAnimationDuration={150}
        opacityAnimationValue={1}
        showThumbWhenDisabled={true}
        thumbComponent={[Function]}
        thumbImg={1}
        thumbSize={38}
        touchThumbSize={60}
        value={
          Object {
            "hue": 100,
            "saturation": 500,
            "value": 500,
          }
        }
        valueToColor={[Function]}
        valueToCoor={[Function]}
      >
        <View
          onLayout={[Function]}
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            onLayout={[Function]}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            pointerEvents="box-only"
            style={
              Array [
                Object {
                  "flex": 1,
                },
                undefined,
              ]
            }
          />
        </View>
      </RectPicker>
      <Slider
        activeColor="#fff"
        clickEnabled={true}
        disabled={false}
        fontColor="#000"
        invalidSwipeDistance={7}
        max={1000}
        min={10}
        minPercent={1}
        onGrant={[Function]}
        onMove={[Function]}
        onPress={[Function]}
        onRelease={[Function]}
        opacityAnimationDuration={150}
        opacityAnimationValue={1}
        showAnimation={true}
        trackColor="#313131"
        value={500}
      >
        <View
          accessibilityLabel="ReactColorPicker_Slider"
          onLayout={[Function]}
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 44,
                "justifyContent": "center",
                "marginTop": 2,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="ReactColorPicker_Slider"
            onLayout={[Function]}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            pointerEvents="box-only"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 44,
                  "justifyContent": "center",
                  "marginTop": 2,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <AnimatedComponent
              style={
                Object {
                  "height": "100%",
                  "opacity": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "height": "100%",
                    "opacity": 1,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#313131",
                          "height": "100%",
                          "width": "100%",
                        },
                        Object {
                          "backgroundColor": "#313131",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#313131",
                            "height": "100%",
                            "width": "100%",
                          },
                          Object {
                            "backgroundColor": "#313131",
                          },
                        ]
                      }
                    />
                  </View>
                  <AnimatedComponent
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#fff",
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                        },
                        Object {
                          "backgroundColor": "#fff",
                          "width": 0,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "#fff",
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "width": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#fff",
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "width": 0,
                          }
                        }
                      />
                    </View>
                  </AnimatedComponent>
                </View>
              </View>
            </AnimatedComponent>
          </View>
        </View>
      </Slider>
    </View>
  </View>
</ColourPicker>
`;

exports[`ColourPicker rectPicker mount disable 1`] = `
<ColourPicker
  bgs={
    Array [
      Object {
        "colors": Array [
          Object {
            "offset": "0%",
            "stopColor": "#FF0000",
            "stopOpacity": 1,
          },
          Object {
            "offset": "8%",
            "stopColor": "#FF7F00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "20%",
            "stopColor": "#FFFF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "25%",
            "stopColor": "#7FFF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "33%",
            "stopColor": "#00FF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "42%",
            "stopColor": "#00FF7F",
            "stopOpacity": 1,
          },
          Object {
            "offset": "50%",
            "stopColor": "#00FFFF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "58%",
            "stopColor": "#007FFF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "66%",
            "stopColor": "#0000FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "75%",
            "stopColor": "#7F00FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "83%",
            "stopColor": "#FF00FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "92%",
            "stopColor": "#FF007F",
            "stopOpacity": 1,
          },
          Object {
            "offset": "100%",
            "stopColor": "#FF0000",
            "stopOpacity": 1,
          },
        ],
      },
      Object {
        "colors": Array [
          Object {
            "offset": "0%",
            "stopColor": "#fff",
            "stopOpacity": 1,
          },
          Object {
            "offset": "16%",
            "stopColor": "#fff",
            "stopOpacity": 0.9,
          },
          Object {
            "offset": "100%",
            "stopColor": "#fff",
            "stopOpacity": 0,
          },
        ],
        "x2": "0%",
        "y2": "100%",
      },
    ]
  }
  brightOption={Object {}}
  clickEnabled={true}
  disabled={true}
  hideBright={false}
  hueOffset={1}
  lossColor="rgba(0,0,0,0.2)"
  lossShow={false}
  lossSliderColor="rgba(255,255,255,0.4)"
  onGrant={[Function]}
  onMove={[Function]}
  onPress={[Function]}
  onRelease={[Function]}
  opacityAnimationDuration={150}
  opacityAnimationValue={1}
  showThumbWhenDisabled={true}
  thumbComponent={[Function]}
  thumbImg={1}
  thumbSize={38}
  touchThumbSize={60}
  value={
    Object {
      "hue": 100,
      "saturation": 500,
      "value": 500,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RectPicker
        bgs={
          Array [
            Object {
              "colors": Array [
                Object {
                  "offset": "0%",
                  "stopColor": "#FF0000",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "8%",
                  "stopColor": "#FF7F00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "20%",
                  "stopColor": "#FFFF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "25%",
                  "stopColor": "#7FFF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "33%",
                  "stopColor": "#00FF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "42%",
                  "stopColor": "#00FF7F",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "50%",
                  "stopColor": "#00FFFF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "58%",
                  "stopColor": "#007FFF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "66%",
                  "stopColor": "#0000FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "75%",
                  "stopColor": "#7F00FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "83%",
                  "stopColor": "#FF00FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "92%",
                  "stopColor": "#FF007F",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "100%",
                  "stopColor": "#FF0000",
                  "stopOpacity": 1,
                },
              ],
            },
            Object {
              "colors": Array [
                Object {
                  "offset": "0%",
                  "stopColor": "#fff",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "16%",
                  "stopColor": "#fff",
                  "stopOpacity": 0.9,
                },
                Object {
                  "offset": "100%",
                  "stopColor": "#fff",
                  "stopOpacity": 0,
                },
              ],
              "x2": "0%",
              "y2": "100%",
            },
          ]
        }
        clickEnabled={true}
        coorToValue={[Function]}
        disabled={true}
        hueOffset={1}
        initData={[Function]}
        lossColor="rgba(0,0,0,0.2)"
        lossShow={false}
        onGrant={[Function]}
        onMove={[Function]}
        onPress={[Function]}
        onRelease={[Function]}
        opacityAnimationDuration={150}
        opacityAnimationValue={1}
        showThumbWhenDisabled={true}
        thumbComponent={[Function]}
        thumbImg={1}
        thumbSize={38}
        touchThumbSize={60}
        value={
          Object {
            "hue": 100,
            "saturation": 500,
            "value": 500,
          }
        }
        valueToColor={[Function]}
        valueToCoor={[Function]}
      >
        <View
          onLayout={[Function]}
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            onLayout={[Function]}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            pointerEvents="box-only"
            style={
              Array [
                Object {
                  "flex": 1,
                },
                undefined,
              ]
            }
          />
        </View>
      </RectPicker>
      <Slider
        activeColor="#fff"
        clickEnabled={true}
        disabled={false}
        fontColor="#000"
        invalidSwipeDistance={7}
        max={1000}
        min={10}
        minPercent={1}
        onGrant={[Function]}
        onMove={[Function]}
        onPress={[Function]}
        onRelease={[Function]}
        opacityAnimationDuration={150}
        opacityAnimationValue={1}
        showAnimation={true}
        trackColor="#313131"
        value={500}
      >
        <View
          accessibilityLabel="ReactColorPicker_Slider"
          onLayout={[Function]}
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 44,
                "justifyContent": "center",
                "marginTop": 2,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="ReactColorPicker_Slider"
            onLayout={[Function]}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            pointerEvents="box-only"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 44,
                  "justifyContent": "center",
                  "marginTop": 2,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <AnimatedComponent
              style={
                Object {
                  "height": "100%",
                  "opacity": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "height": "100%",
                    "opacity": 1,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#313131",
                          "height": "100%",
                          "width": "100%",
                        },
                        Object {
                          "backgroundColor": "#313131",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#313131",
                            "height": "100%",
                            "width": "100%",
                          },
                          Object {
                            "backgroundColor": "#313131",
                          },
                        ]
                      }
                    />
                  </View>
                  <AnimatedComponent
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#fff",
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                        },
                        Object {
                          "backgroundColor": "#fff",
                          "width": 0,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "#fff",
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "width": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#fff",
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "width": 0,
                          }
                        }
                      />
                    </View>
                  </AnimatedComponent>
                </View>
              </View>
            </AnimatedComponent>
          </View>
        </View>
      </Slider>
    </View>
  </View>
</ColourPicker>
`;

exports[`ColourPicker slider mount 1`] = `
<ColourPicker
  bgs={
    Array [
      Object {
        "colors": Array [
          Object {
            "offset": "0%",
            "stopColor": "#FF0000",
            "stopOpacity": 1,
          },
          Object {
            "offset": "8%",
            "stopColor": "#FF7F00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "20%",
            "stopColor": "#FFFF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "25%",
            "stopColor": "#7FFF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "33%",
            "stopColor": "#00FF00",
            "stopOpacity": 1,
          },
          Object {
            "offset": "42%",
            "stopColor": "#00FF7F",
            "stopOpacity": 1,
          },
          Object {
            "offset": "50%",
            "stopColor": "#00FFFF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "58%",
            "stopColor": "#007FFF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "66%",
            "stopColor": "#0000FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "75%",
            "stopColor": "#7F00FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "83%",
            "stopColor": "#FF00FF",
            "stopOpacity": 1,
          },
          Object {
            "offset": "92%",
            "stopColor": "#FF007F",
            "stopOpacity": 1,
          },
          Object {
            "offset": "100%",
            "stopColor": "#FF0000",
            "stopOpacity": 1,
          },
        ],
      },
      Object {
        "colors": Array [
          Object {
            "offset": "0%",
            "stopColor": "#fff",
            "stopOpacity": 1,
          },
          Object {
            "offset": "16%",
            "stopColor": "#fff",
            "stopOpacity": 0.9,
          },
          Object {
            "offset": "100%",
            "stopColor": "#fff",
            "stopOpacity": 0,
          },
        ],
        "x2": "0%",
        "y2": "100%",
      },
    ]
  }
  brightOption={Object {}}
  clickEnabled={true}
  disabled={false}
  hideBright={false}
  hueOffset={1}
  lossColor="rgba(0,0,0,0.2)"
  lossShow={false}
  lossSliderColor="rgba(255,255,255,0.4)"
  onGrant={[Function]}
  onMove={[Function]}
  onPress={[Function]}
  onRelease={[Function]}
  opacityAnimationDuration={150}
  opacityAnimationValue={1}
  showThumbWhenDisabled={true}
  thumbComponent={[Function]}
  thumbImg={1}
  thumbSize={38}
  touchThumbSize={60}
  value={
    Object {
      "hue": 100,
      "saturation": 500,
      "value": 500,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RectPicker
        bgs={
          Array [
            Object {
              "colors": Array [
                Object {
                  "offset": "0%",
                  "stopColor": "#FF0000",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "8%",
                  "stopColor": "#FF7F00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "20%",
                  "stopColor": "#FFFF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "25%",
                  "stopColor": "#7FFF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "33%",
                  "stopColor": "#00FF00",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "42%",
                  "stopColor": "#00FF7F",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "50%",
                  "stopColor": "#00FFFF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "58%",
                  "stopColor": "#007FFF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "66%",
                  "stopColor": "#0000FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "75%",
                  "stopColor": "#7F00FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "83%",
                  "stopColor": "#FF00FF",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "92%",
                  "stopColor": "#FF007F",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "100%",
                  "stopColor": "#FF0000",
                  "stopOpacity": 1,
                },
              ],
            },
            Object {
              "colors": Array [
                Object {
                  "offset": "0%",
                  "stopColor": "#fff",
                  "stopOpacity": 1,
                },
                Object {
                  "offset": "16%",
                  "stopColor": "#fff",
                  "stopOpacity": 0.9,
                },
                Object {
                  "offset": "100%",
                  "stopColor": "#fff",
                  "stopOpacity": 0,
                },
              ],
              "x2": "0%",
              "y2": "100%",
            },
          ]
        }
        clickEnabled={true}
        coorToValue={[Function]}
        disabled={false}
        hueOffset={1}
        initData={[Function]}
        lossColor="rgba(0,0,0,0.2)"
        lossShow={false}
        onGrant={[Function]}
        onMove={[Function]}
        onPress={[Function]}
        onRelease={[Function]}
        opacityAnimationDuration={150}
        opacityAnimationValue={1}
        showThumbWhenDisabled={true}
        thumbComponent={[Function]}
        thumbImg={1}
        thumbSize={38}
        touchThumbSize={60}
        value={
          Object {
            "hue": 100,
            "saturation": 500,
            "value": 500,
          }
        }
        valueToColor={[Function]}
        valueToCoor={[Function]}
      >
        <View
          onLayout={[Function]}
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            onLayout={[Function]}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            pointerEvents="box-only"
            style={
              Array [
                Object {
                  "flex": 1,
                },
                undefined,
              ]
            }
          />
        </View>
      </RectPicker>
      <Slider
        activeColor="#fff"
        clickEnabled={true}
        disabled={false}
        fontColor="#000"
        invalidSwipeDistance={7}
        max={1000}
        min={10}
        minPercent={1}
        onGrant={[Function]}
        onMove={[Function]}
        onPress={[Function]}
        onRelease={[Function]}
        opacityAnimationDuration={150}
        opacityAnimationValue={1}
        showAnimation={true}
        trackColor="#313131"
        value={500}
      >
        <View
          accessibilityLabel="ReactColorPicker_Slider"
          onLayout={[Function]}
          onMoveShouldSetResponder={[Function]}
          onMoveShouldSetResponderCapture={[Function]}
          onResponderEnd={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderReject={[Function]}
          onResponderRelease={[Function]}
          onResponderStart={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onStartShouldSetResponderCapture={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 44,
                "justifyContent": "center",
                "marginTop": 2,
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="ReactColorPicker_Slider"
            onLayout={[Function]}
            onMoveShouldSetResponder={[Function]}
            onMoveShouldSetResponderCapture={[Function]}
            onResponderEnd={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderReject={[Function]}
            onResponderRelease={[Function]}
            onResponderStart={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onStartShouldSetResponderCapture={[Function]}
            pointerEvents="box-only"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 44,
                  "justifyContent": "center",
                  "marginTop": 2,
                  "width": "100%",
                },
                undefined,
              ]
            }
          >
            <AnimatedComponent
              style={
                Object {
                  "height": "100%",
                  "opacity": 1,
                  "width": "100%",
                }
              }
            >
              <View
                style={
                  Object {
                    "height": "100%",
                    "opacity": 1,
                    "width": "100%",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "height": "100%",
                      "opacity": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#313131",
                          "height": "100%",
                          "width": "100%",
                        },
                        Object {
                          "backgroundColor": "#313131",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#313131",
                            "height": "100%",
                            "width": "100%",
                          },
                          Object {
                            "backgroundColor": "#313131",
                          },
                        ]
                      }
                    />
                  </View>
                  <AnimatedComponent
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#fff",
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                        },
                        Object {
                          "backgroundColor": "#fff",
                          "width": 0,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "#fff",
                          "height": "100%",
                          "left": 0,
                          "position": "absolute",
                          "width": 0,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "backgroundColor": "#fff",
                            "height": "100%",
                            "left": 0,
                            "position": "absolute",
                            "width": 0,
                          }
                        }
                      />
                    </View>
                  </AnimatedComponent>
                </View>
              </View>
            </AnimatedComponent>
          </View>
        </View>
      </Slider>
    </View>
  </View>
</ColourPicker>
`;
